# pokebot

./: .gitignore  Cargo.toml  README.md  askama.toml  config.toml.example  flake.nix  log4rs.yml  package.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: create-release.yml  run-tests.yml  rust.yml
src/: audio_player.rs  bot.rs  command.rs  log_bridge.rs  main.rs  playlist.rs  state.rs  teamspeak.rs  web_server.rs  youtube_dl.rs
src/bot/: master.rs  music.rs
src/teamspeak/: bbcode.rs  mod.rs
src/web_server/: api.rs  bot_data.rs  bot_executor.rs  default.rs  front_end_cookie.rs  tmtu.rs
systemd/: pokebot.service
templates/: base.htm  index.htm  song.htm
templates/tmtu/: index.htm
web_server/static/: style.css
web_server/templates/: index.htm
web_server/templates/docs/: api.htm
web_server/templates/tmtu/: index.htm
