[package]
name = "pokebot"
version = "0.2.0"
authors = ["Jokler <jokler@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", features = ["unstable"] }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
toml = "0.5.7"
structopt = "0.3.20"
humantime = "2.0.1"

slog = "2.5.2"
slog-async = "2.5.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"

log = "0.4.11"
log4rs = { version = "0.13.0" }

tokio = { version = "0.2.22", features = ["rt-threaded", "process", "blocking", "io-std"] }
futures = "0.3.6"
# git version for async Actor trait
xtra = { git = "https://github.com/Restioson/xtra", features = ["with-tokio-0_2"] }
async-trait = "0.1.41"

glib = "0.10.2"
gstreamer = "0.16.4"
gstreamer-app = "0.16.3"
gstreamer-audio = "0.16.4"

serde = "1.0.116"
serde_json = "1.0.59"
rand = { version = "0.7.3", features = ["small_rng"] }
derive_more = "0.99.11"

actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.1.0"
actix-files = "0.4.0"
actix-slog = "0.2.1"
askama_actix = "0.11.1"
askama = "0.10.3"
anyhow = "1.0.33"
id3 = "0.6.1"
metaflac = "0.2.4"
base64 = "0.13.0"
