[package]
name = "pokebot"
version = "0.3.0"
authors = ["Jokler <jokler@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", features = ["unstable"] }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
toml = "0.5.8"
structopt = "0.3.22"
humantime = "2.1.0"
anyhow = "1.0.42"

slog = "2.7.0"
slog-async = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"

log = "0.4.14"
log4rs = "1.0.0"

tokio = { version = "1.9.0", features = ["rt-multi-thread", "process", "io-std", "macros", "signal"] }
futures = "0.3.16"
# git version for async Actor trait
#xtra = { git = "https://github.com/Restioson/xtra", features = ["with-tokio-0_2"] }
xtra = { version = "0.5.1", features = ["with-tokio-1"] }
async-trait = "0.1.51"

glib = "0.14.2"
gstreamer = "0.17.1"
gstreamer-app = "0.17.0"
gstreamer-audio = "0.17.0"

id3 = "0.6.4"
metaflac = "0.2.4"
base64 = "0.13.0"
walkdir = "2.3.2"

serde = "1.0.127"
serde_json = "1.0.66"
rand = { version = "0.8.4", features = ["small_rng"] }
derive_more = "0.99.16"

actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-slog = "0.2.1"
askama_actix = "0.11.1"
askama = "0.10.5"
