[package]
name = "pokebot"
version = "0.3.0"
authors = ["Jokler <jokler@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", features = [
  "unstable",
] }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
toml = "0.5.8"
structopt = "0.3.22"
humantime = "2.1.0"
anyhow = "1.0.42"

slog = "2.7.0"

tokio = { version = "1.9.0", features = [
  "rt-multi-thread",
  "process",
  "io-std",
  "macros",
  "signal",
] }
futures = "0.3.16"
# git version for async Actor trait
#xtra = { git = "https://github.com/Restioson/xtra", features = ["with-tokio-0_2"] }
xtra = { version = "0.5.1", features = ["with-tokio-1"] }
async-trait = "0.1.51"

glib = "0.14.2"
gstreamer = "0.17.1"
gstreamer-app = "0.17.0"
gstreamer-audio = "0.17.0"

id3 = "0.6.4"
metaflac = "0.2.4"
base64 = "0.13.0"
walkdir = "2.3.2"

serde = "1.0.127"
serde_json = "1.0.66"
rand = { version = "0.8.4", features = ["small_rng"] }
derive_more = "0.99.16"

axum = "0.8.3"
askama = "0.14.0"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-slog = "0.3.0"
lofty = "0.22.4"
